--- a/styles/style.css
+++ b/styles/style.css
@@ -9,12 +9,12 @@
   background-attachment: fixed;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  gap: 60px;
+  min-height: 100vh;
 }
 
 .header {
   position: relative;
-  padding: 20px;
+  padding: 15px 20px 15px 15px;
   min-height: 100vh;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
@@ -22,6 +22,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: 60px;
 }
 
 .header__decoration {
@@ -143,18 +144,20 @@
   color: var(--article-title-color);
   font-weight: 400;
 }
-/*
-.content {
-  padding: 40px 10px;
+
+.title-decor-galery {
+  background-color: var(--accent-color);
+  color: var(--h-text-color);
+  font-weight: 700;
+  font-size: inherit;
+  line-height: 1.3;
+  height: fit-content;
+  margin-left: 10px;
+  margin-bottom: 20px;
 }
 
-.section {
-  margin-bottom: 50px;
-}
-*/
 .section__title {
   color: var(--section-title-color);
-  /*margin-bottom: 20px;*/
   font-size: 18px;
   margin-left: 15px;
   max-width: 315px;
@@ -166,15 +169,14 @@
   gap: 20px;
 }
 
-
 .article__title {
   font-size: 18px;
-  margin-right: 10px;
+  margin-left: 5px;
 }
 
 .article__text {
   line-height: 1.3;
-   margin-top: 10px;
+  margin-top: 10px;
 }
 
 .article__link {
@@ -208,8 +210,6 @@
 }
 
 .footer {
-  position: relative;
-  min-height: 100vh;
   display: grid;
   place-items: center;
   padding: 10px;
@@ -224,17 +224,13 @@
 }
 
 @media (min-width: 768px) {
-  .header {
-    padding: 10px;
-  }
-
   .header__decoration {
     top: 20px;
-    right: 22px;
+    right: 30px;
   }
 
   .decorated-zone::before {
-    right: 10px;
+    right: 20px;
     top: 20px;
   }
 
@@ -250,7 +246,7 @@
 
   .header__text {
     max-width: 364px;
-    margin-top: 55px;
+    margin-top: 53px;
     margin-bottom: 40px;
     max-height: fit-content;
   }
@@ -258,7 +254,8 @@
   .content {
     display: grid;
     gap: 80px;
-    /*padding: 60px 20px;*/
+    margin-bottom: 60px;
+    padding: 0 20px 0px 5px;
   }
 
   .section:nth-child(1) {
@@ -292,6 +289,8 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .gallery__item:nth-child(1) {
@@ -332,7 +331,7 @@
 
   .header__theme-menu {
     justify-self: center;
-    margin-top: 5px;
+    margin: 0;
   }
 
   .header__theme-menu-list {
@@ -348,7 +347,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    padding-left: 1vh;
+    padding-left: 0;
   }
 
   .footer {
