--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,13 @@
   max-height: fit-content;
 }
 
+.content {
+  display: grid;
+  gap: 80px;
+  margin-bottom: 60px;
+  padding: 0 20px 0px 5px;
+}
+
 .decorated-zone {
   position: relative;
 }
@@ -209,6 +216,31 @@
   display: block;
 }
 
+.gallery__item:nth-child(1) {
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+
+.gallery__item:nth-child(2) {
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
+
+.gallery__item:nth-child(3) {
+  grid-column: 1;
+  grid-row: 2 / 4;
+}
+
+.gallery__item:nth-child(4) {
+  grid-column: 2 / 4;
+  grid-row: 3;
+}
+
+.gallery__item:nth-child(5) {
+  grid-column: 2;
+  grid-row: 2;
+}
+
 .footer {
   display: grid;
   place-items: center;
@@ -223,7 +255,42 @@
   align-self: center;
 }
 
-@media (min-width: 768px) {
+.section:nth-child(1) {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.section:nth-child(1) .section__title {
+  grid-column: 1;
+  margin-bottom: 0;
+}
+
+.section:nth-child(1) .section__content {
+  grid-column: 2;
+}
+
+.section:nth-child(2) {
+  display: grid;
+  gap: 20px;
+}
+
+.section:nth-child(3) {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
+  gap: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media (width <= 768px) {
   .header__decoration {
     top: 20px;
     right: 30px;
@@ -246,80 +313,25 @@
 
   .header__text {
     max-width: 364px;
-    margin-top: 53px;
+    margin-top: 165px;
     margin-bottom: 40px;
     max-height: fit-content;
   }
 
-  .content {
-    display: grid;
-    gap: 80px;
-    margin-bottom: 60px;
-    padding: 0 20px 0px 5px;
-  }
-
-  .section:nth-child(1) {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 20px;
-  }
-
-  .section:nth-child(1) .section__title {
-    grid-column: 1;
-    margin-bottom: 0;
-  }
-
-  .section:nth-child(1) .section__content {
-    grid-column: 2;
-  }
-
-  .section:nth-child(2) {
-    display: grid;
-    gap: 20px;
-  }
-
-  .section:nth-child(3) {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 20px;
-  }
-
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
-    gap: 20px;
+  .article__title {
     margin-left: 10px;
-    margin-right: 10px;
   }
 
-  .gallery__item:nth-child(1) {
-    grid-column: 1 / 3;
-    grid-row: 1;
+  .article__text {
+    margin-left: 10px;
   }
 
-  .gallery__item:nth-child(2) {
-    grid-column: 3;
-    grid-row: 1 / 3;
-  }
-
-  .gallery__item:nth-child(3) {
-    grid-column: 1;
-    grid-row: 2 / 4;
-  }
-
-  .gallery__item:nth-child(4) {
-    grid-column: 2 / 4;
-    grid-row: 3;
-  }
-
-  .gallery__item:nth-child(5) {
-    grid-column: 2;
-    grid-row: 2;
+  .section__title {
+    max-width: 235px;
   }
 
   .footer {
-    padding: 20px;
+    min-height: 1038px;
   }
 }
 
