--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@
   display: grid;
   gap: 80px;
   margin-bottom: 60px;
-  padding-right: 10px;
+  padding-right: 20px;
   margin-left: 10px;
 }
 
@@ -127,8 +127,8 @@
 .decorated-zone::before {
   border-left: none;
   border-bottom: none;
-  right: 20px;
-  top: 20px;
+  right: 10px;
+  top: 10px;
 }
 
 .decorated-zone::after {
@@ -145,14 +145,12 @@
   font-size: inherit;
   line-height: 1.3;
   height: fit-content;
-  margin-right: 10px;
 }
 
 .title-decor-special {
   background-color: var(--accent-color);
   color: var(--article-title-color);
   font-weight: 400;
-  margin-right: 10px;
 }
 
 .title-decor-galery {
@@ -164,7 +162,6 @@
   height: fit-content;
   margin-left: 10px;
   margin-bottom: 20px;
-  margin-right: 10px;
 }
 
 .section__title {
@@ -361,7 +358,6 @@
   .header__text {
     max-width: 491px;
     max-height: fit-content;
-    margin-right: 0;
   }
 
   .section:nth-child(2) .section__content {
@@ -410,6 +406,7 @@
 
   .content {
     gap: 50px;
+    padding-right: 0;
   }
 
   .section__title {
@@ -427,6 +424,7 @@
 
   .article__title {
     margin-left: 0;
+
   }
 
   .article__text {
@@ -443,13 +441,16 @@
     margin-right: 0;
   }
 
-  .title-decor-galery {
-    margin-left: 0;
+  .gallery__item {
     margin-bottom: 10px;
   }
 
+  .title-decor-galery {
+    margin-left: 0;
+  }
+
   .footer {
-    min-height: 630px;
+    min-height: 668px;
   }
 
   .footer__title {
