--- a/styles/style.css
+++ b/styles/style.css
@@ -204,11 +204,6 @@
   border: 1px solid var(--text-color);
 }
 
-.gallery {
-  display: grid;
-  gap: 20px;
-}
-
 .gallery__image {
   width: 100%;
   height: 100%;
@@ -232,13 +227,13 @@
 }
 
 .gallery__item:nth-child(4) {
-  grid-column: 2 / 4;
-  grid-row: 3;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .gallery__item:nth-child(5) {
-  grid-column: 2;
-  grid-row: 2;
+  grid-column: 2 / 4;
+  grid-row: 3;
 }
 
 .footer {
@@ -368,7 +363,7 @@
   }
 
   .footer {
-    min-height: 768px;
+    min-height: 545px;
   }
 }
 
@@ -423,8 +418,7 @@
   }
 
   .article__title {
-    margin-left: 0;
-
+    margin: 0 10px 0 0;
   }
 
   .article__text {
@@ -432,25 +426,28 @@
     font-size: 18px;
     max-width: 355px;
   }
-
+  .title-decor {
+    margin-right: 10px;
+  }
   .gallery {
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin-left: 0;
-    margin-right: 0;
-  }
-
-  .gallery__item {
-    margin-bottom: 10px;
   }
 
   .title-decor-galery {
     margin-left: 0;
+    margin-right: 10px;
+    margin: 0 10px 10px 0;
+  }
+
+  .header .title-decor {
+    margin-right: 0;
   }
 
   .footer {
-    min-height: 668px;
+    min-height: 633px;
   }
 
   .footer__title {
