--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,10 @@ a {
   font-size: inherit;
   line-height: inherit;
 }
+
+.footer {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  padding: 10px;
+}
