--- a/styles/style.css
+++ b/styles/style.css
@@ -390,11 +390,6 @@
     max-width: 355px;
   }
 
-  .content {
-    gap: 50px;
-    padding-right: 0;
-  }
-
   .section__title {
     margin-left: 0;
     max-width: 355px;
@@ -442,29 +437,15 @@
 
   .content {
     margin-bottom: 30px;
+    gap: 50px;
+    padding-right: 0;
+  }
+  .header__decoration {
+    top: 10px;
+    right: 20px;
   }
 }
 
-/*@media (width <= 580px) {
-  .header__text {
-    max-width: fit-content;
-  }
-
-  .section__title {
-    max-width: fit-content;
-  }
-
-  .section_default,
-  .section_different {
-    display: block;
-    margin: 0;
-  }
-
-  .article__text {
-    max-width: fit-content;
-  }
-}
-*/
 @keyframes pulse {
   0%,
   100% {
