--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 .page {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -318,7 +312,10 @@ body {
     margin-bottom: 40px;
     max-height: fit-content;
   }
-
+  .header__subtitle {
+    display: block;
+    margin: 0;
+  }
   .article__title {
     margin-left: 7px;
   }
